src/test/resources/dev/meanmail/inspections/directive/unknownDirective.nginx
<error descr="Unknown directive 'my_custom_directive'. It may be available in Nginx Pro">my_custom_directive</error> on;
